2023-06-19  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (pull_from_bundles): no longer use
        branches when cloning
        (git_bundle_clone): normalize bundle path

        * NAMESPACE: export "pull_from_bundles"

        * R/gitsync.R (pull_from_bundles): add argument
        'if.not.exists', with default 'skip'

2023-06-16  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R: fix paths; remove instance of setwd()

        * .Rbuildignore: fix regular expressions

2023-06-15  Enrico Schumann  <es@enricoschumann.net>

        * initial version: sketches of functions for
        syncing directories and subdirectories with git