@@ -1,3 +1,8 @@
+2023-06-20  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/gitsync.R (pull_from_bundles): try to get
+        branch name from bundle
+
 2023-06-19  Enrico Schumann  <es@enricoschumann.net>
 
         * R/gitsync.R (pull_from_bundles): no longer use
